--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.49.3",
     "cloudinary-react-native": "^1.0.0",
     "expo": "~52.0.39",
     "expo-constants": "~17.0.8",
